@@ -894,68 +894,6 @@ if|if
 condition|(
 name|query
 operator|instanceof
-name|AutomatonQuery
-condition|)
-block|{
-specifier|final
-name|AutomatonQuery
-name|aq
-init|=
-operator|(
-name|AutomatonQuery
-operator|)
-name|query
-decl_stmt|;
-if|if
-condition|(
-name|fieldMatcher
-operator|.
-name|test
-argument_list|(
-name|aq
-operator|.
-name|getField
-argument_list|()
-argument_list|)
-condition|)
-block|{
-name|list
-operator|.
-name|add
-argument_list|(
-operator|new
-name|CharacterRunAutomaton
-argument_list|(
-name|aq
-operator|.
-name|getAutomaton
-argument_list|()
-argument_list|)
-block|{
-annotation|@
-name|Override
-specifier|public
-name|String
-name|toString
-parameter_list|()
-block|{
-return|return
-name|aq
-operator|.
-name|toString
-argument_list|()
-return|;
-block|}
-block|}
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-elseif|else
-if|if
-condition|(
-name|query
-operator|instanceof
 name|PrefixQuery
 condition|)
 block|{
@@ -1542,6 +1480,68 @@ parameter_list|()
 block|{
 return|return
 name|tq
+operator|.
+name|toString
+argument_list|()
+return|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+elseif|else
+if|if
+condition|(
+name|query
+operator|instanceof
+name|AutomatonQuery
+condition|)
+block|{
+specifier|final
+name|AutomatonQuery
+name|aq
+init|=
+operator|(
+name|AutomatonQuery
+operator|)
+name|query
+decl_stmt|;
+if|if
+condition|(
+name|fieldMatcher
+operator|.
+name|test
+argument_list|(
+name|aq
+operator|.
+name|getField
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|list
+operator|.
+name|add
+argument_list|(
+operator|new
+name|CharacterRunAutomaton
+argument_list|(
+name|aq
+operator|.
+name|getAutomaton
+argument_list|()
+argument_list|)
+block|{
+annotation|@
+name|Override
+specifier|public
+name|String
+name|toString
+parameter_list|()
+block|{
+return|return
+name|aq
 operator|.
 name|toString
 argument_list|()
