@@ -160,6 +160,22 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|analysis
+operator|.
+name|standard
+operator|.
+name|StandardAnalyzer
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|document
 operator|.
 name|Document
@@ -5231,6 +5247,7 @@ argument_list|,
 name|indexAnalyzer
 argument_list|)
 decl_stmt|;
+comment|// use a variety of common MTQ types
 name|BooleanQuery
 name|query
 init|=
@@ -5243,14 +5260,14 @@ operator|.
 name|add
 argument_list|(
 operator|new
-name|WildcardQuery
+name|PrefixQuery
 argument_list|(
 operator|new
 name|Term
 argument_list|(
 literal|"body"
 argument_list|,
-literal|"te*"
+literal|"te"
 argument_list|)
 argument_list|)
 argument_list|,
@@ -5271,7 +5288,7 @@ name|Term
 argument_list|(
 literal|"body"
 argument_list|,
-literal|"one"
+literal|"*one*"
 argument_list|)
 argument_list|)
 argument_list|,
@@ -5285,14 +5302,14 @@ operator|.
 name|add
 argument_list|(
 operator|new
-name|WildcardQuery
+name|FuzzyQuery
 argument_list|(
 operator|new
 name|Term
 argument_list|(
 literal|"body"
 argument_list|,
-literal|"se*"
+literal|"zentence~"
 argument_list|)
 argument_list|)
 argument_list|,
@@ -5667,10 +5684,9 @@ operator|.
 name|length
 argument_list|)
 expr_stmt|;
-comment|// Default formatter bolds each hit:
 name|assertEquals
 argument_list|(
-literal|"<b>Test(body:te*)</b> a<b>one(body:one)</b><b>sentence(body:se*)</b> document."
+literal|"<b>Test(body:te*)</b> a<b>one(body:*one*)</b><b>sentence(body:zentence~~2)</b> document."
 argument_list|,
 name|snippets
 index|[
@@ -7746,6 +7762,163 @@ name|hashCode
 argument_list|()
 return|;
 block|}
+block|}
+comment|// LUCENE-7717 bug, ordering of MTQ AutomatonQuery detection
+DECL|method|testRussianPrefixQuery
+specifier|public
+name|void
+name|testRussianPrefixQuery
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Analyzer
+name|analyzer
+init|=
+operator|new
+name|StandardAnalyzer
+argument_list|()
+decl_stmt|;
+name|RandomIndexWriter
+name|iw
+init|=
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|dir
+argument_list|,
+name|analyzer
+argument_list|)
+decl_stmt|;
+name|String
+name|field
+init|=
+literal|"title"
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Field
+argument_list|(
+name|field
+argument_list|,
+literal|"Ñ"
+argument_list|,
+name|fieldType
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// Russian char; uses 2 UTF8 bytes
+name|iw
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|IndexReader
+name|ir
+init|=
+name|iw
+operator|.
+name|getReader
+argument_list|()
+decl_stmt|;
+name|iw
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|IndexSearcher
+name|searcher
+init|=
+name|newSearcher
+argument_list|(
+name|ir
+argument_list|)
+decl_stmt|;
+name|Query
+name|query
+init|=
+operator|new
+name|PrefixQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+name|field
+argument_list|,
+literal|"Ñ"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|TopDocs
+name|topDocs
+init|=
+name|searcher
+operator|.
+name|search
+argument_list|(
+name|query
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+name|UnifiedHighlighter
+name|highlighter
+init|=
+operator|new
+name|UnifiedHighlighter
+argument_list|(
+name|searcher
+argument_list|,
+name|analyzer
+argument_list|)
+decl_stmt|;
+name|String
+index|[]
+name|snippets
+init|=
+name|highlighter
+operator|.
+name|highlight
+argument_list|(
+name|field
+argument_list|,
+name|query
+argument_list|,
+name|topDocs
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"[<b>Ñ</b>]"
+argument_list|,
+name|Arrays
+operator|.
+name|toString
+argument_list|(
+name|snippets
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|ir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 block|}
 block|}
 end_class
